--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app-to-host",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mohit9121.github.io/app-to-host/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
